--- a/provision/roles/mopidy/templates/mopidy.conf.j2
+++ b/provision/roles/mopidy/templates/mopidy.conf.j2
@@ -11,6 +11,8 @@ output = alsasink
 username = {{ spotify_user }}
 password = {{ spotify_password }}
 
-
 [http]
 hostname = ::
+
+[soundcloud]
+auth_token = {{ soundcloud_auth_token }}
