--- a/provision/roles/mopidy/templates/mopidy.conf.j2
+++ b/provision/roles/mopidy/templates/mopidy.conf.j2
@@ -13,6 +13,7 @@ password = {{ spotify_password }}
 
 [http]
 hostname = ::
+static_dir = /home/pi/Mopidy-Webclient/webclient
 
 [soundcloud]
 auth_token = {{ soundcloud_auth_token }}
